--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
         <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
     </ul>
+    </div>
 </body>
 </html>
